--- a/styles/landing/nav.module.sass
+++ b/styles/landing/nav.module.sass
@@ -9,7 +9,7 @@
     flex-flow: row nowrap
     align-items: center
     justify-content: space-between
-    background-color: theme.$bg-landing-secondary
+    background-color: transparent
     transition: all 1s ease
 
 .logo
