Hero section almost done :: TODO : signup in Hero

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -22,6 +22,10 @@ $trello-shadow-grey: rgba(0,0,0,0.3)
 // breakpoints for landing page 
 $breakpoint-landing-md: 768px
 $breakpoint-landing-lg: 992px
+$breakpoint-landing-xl: 1200px
+
+// z-index
+$zindex-nav: 111
 
 // --------------------------------------------------
 // mixins
