--- a/styles/landing/hero.module.sass
+++ b/styles/landing/hero.module.sass
@@ -6,13 +6,18 @@
     display: flex
     flex-direction: row nowrap
     align-items: center
-    justify-content: space-between
+    justify-content: center
+    width: 100%
+    max-width: 540px
+    margin-inline-start: auto
+    margin-inline-end: auto
+    padding: 7rem 15px 5rem 15px
+    text-align: center
 
 .heroLeft
     & > h1, & > p
         color: theme.$trello-text-blackish
         margin-block-start: 0
-        text-align: center
         hypens: auto
     & > h1
         font-size: 2rem
@@ -35,6 +40,9 @@
 // --------------------------------------------------
 // media conditions
 @media screen and (min-width: theme.$breakpoint-landing-md)
+    .heroContainer
+        max-width: 720px
+        text-align: left
     .signupEmail
         display: block
 
@@ -44,10 +52,24 @@
             line-height: 1.18
 
 @media screen and (min-width: theme.$breakpoint-landing-lg)
+    .heroContainer
+        max-width: 960px
+
     .heroRight
         display: block
+        width: 100%
+        max-width: 40%
+        position: relative
+        margin-inline-start: 80px
+        margin-inline-end: -120px
+        height: 478px
 
     .heroLeft
+        max-width: 60%
         & > h1
             font-size: 3rem
             line-height: 1.25
+
+@media screen and (min-width: theme.$breakpoint-landing-xl)
+    .heroContainer
+        max-width: 1140px
