--- a/styles/landing/hero.module.sass
+++ b/styles/landing/hero.module.sass
@@ -15,6 +15,7 @@
     text-align: center
 
 .heroLeft
+    width: 100%
     & > h1, & > p
         color: theme.$trello-text-blackish
         margin-block-start: 0
@@ -29,10 +30,36 @@
         font-size: 20px
         font-weight: 400
         line-height: 1.5
-        margin-block-end: 1.5rem
+        margin-block-end: 2.5rem
+
+    & > form
+        width: 100%
 
 .signupEmail
     display: none
+
+.signupSubmit
+    width: 100%
+    height: 44px
+
+    & > button
+        width: 100%
+        height: 100%
+        padding: .375rem .75rem
+        background-color: theme.$trello-blue
+        border: 1px solid theme.$trello-blue
+        border-radius: 6px
+        color: theme.$trello-white
+        font-size: 1.25rem
+        line-height: 1.5
+        font-weight: 400
+        transition: all .15s ease-in-out
+
+        &:hover
+            background-color: theme.$trello-blue-hover
+        &:hover, &:focus
+            @include theme.button-hover-focus-shadow
+            cursor: pointer
 
 .heroRight
     display: none
@@ -45,11 +72,40 @@
         text-align: left
     .signupEmail
         display: block
+        width: 60%
+        height: 44px
+        & > input
+            padding: .375rem .75rem
+            width: 100%
+            height: 100%
+            border: 1px solid theme.$border-input-grey
+            border-radius: 6px
+            font-size: 1.25rem
+            line-height: 1.5
+            font-weight: 400
+            color: theme.$trello-text-input
+            transition: all .15s ease-in-out
+
+            &:hover, &:focus
+                @include theme.button-hover-focus-shadow
+                cursor: pointer
+
+    .signupSubmit
+        width: 40%
 
     .heroLeft
         & > h1
             font-size: 2.7rem
             line-height: 1.18
+
+        & > form
+            display: flex
+            flex-flow: row nowrap
+            align-items: center
+            justify-content: space-between
+
+            & > * + *
+                margin-inline-start: 20px
 
 @media screen and (min-width: theme.$breakpoint-landing-lg)
     .heroContainer
