Signup form creation running

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -3,9 +3,13 @@
 // text-color
 $trello-blue: #0065ff
 $trello-blue-hover: #0051cc
+$trello-blue-focus: #4c9aff
 $trello-white: #fff
 $trello-text-blackish: #091e42
 $trello-text-input: #495057
+$trello-anchor-text-color-primary: #0052cc
+// color for form
+$trello-form-text-primary: #5E6C84
 
 // button-color
 
