--- a/styles/account/signup-form.module.sass
+++ b/styles/account/signup-form.module.sass
@@ -24,9 +24,51 @@
 
 .formContainer
     align-self: stretch
-    background-color: theme.$bg-primary
+    background-color: transparent
+    padding: 40px
+    color: theme.$trello-form-text-primary
     // || testing with height
     height: 500px
+
+    & > h1
+        font-size: 16px
+        line-height: 1.6
+        margin: 0
+        margin-block-end: 25px
+        text-align: center
+
+.form
+    font-weight: 300
+    line-height: 1.5
+    & > input
+        width: 100%
+        height: 44px
+        padding: 5px 10px
+        border: 2px solid theme.$border-input-grey
+        border-radius: 3px
+        transition: all .15s ease-in-out
+        font: inherit
+
+        &:focus
+            border-color: theme.$trello-blue-focus
+            outline: none
+
+.policy
+    font-weight: inherit
+    font-size: 12px
+    line-height: 1.3
+    color: inherit
+    margin: 20px 0
+
+    & > a
+        display: inline-block
+        color: theme.$trello-anchor-text-color-primary
+        text-decoration: none
+        transition: all .15s ease-in-out
+
+        &:hover
+            cursor: pointer
+            text-decoration: 1px underline theme.$trello-anchor-text-color-primary
 
 // --------------------------------------------------
 // media condition
@@ -37,4 +79,5 @@
         padding: 40px 0 30px 0
 
     .formContainer
+        background-color: theme.$bg-primary
         @include theme.account-form-shadow
