--- a/styles/account/signup-form.module.sass
+++ b/styles/account/signup-form.module.sass
@@ -27,8 +27,6 @@
     background-color: transparent
     padding: 40px
     color: theme.$trello-form-text-primary
-    // || testing with height
-    height: 500px
 
     & > h1
         font-size: 16px
@@ -44,14 +42,15 @@
         width: 100%
         height: 44px
         padding: 5px 10px
+        border-color: transparent
         border: 2px solid theme.$border-input-grey
         border-radius: 3px
         transition: all .15s ease-in-out
         font: inherit
+        outline: none
 
         &:focus
             border-color: theme.$trello-blue-focus
-            outline: none
 
 .policy
     font-weight: inherit
@@ -61,7 +60,6 @@
     margin: 20px 0
 
     & > a
-        display: inline-block
         color: theme.$trello-anchor-text-color-primary
         text-decoration: none
         transition: all .15s ease-in-out
@@ -69,6 +67,76 @@
         &:hover
             cursor: pointer
             text-decoration: 1px underline theme.$trello-anchor-text-color-primary
+
+.continueButton
+    width: 100%
+    height: 34px
+    border: none
+    background-color: theme.$bg-button-inactive
+    color: theme.$text-color-button-inactive
+    border-radius: 6px
+    font-weight: bold
+    padding: 6px 10px
+
+.or
+    margin: 16px 0
+    color: theme.$text-color-primary
+    font-size: 12px
+    font-weight: 300
+    line-height: 1.4
+    text-align: center
+
+.thirdpartyAuth
+    & > * + *
+        margin-block-start: 15px
+
+.oauthButton
+    @include theme.button-shadow
+    width: 100%
+    height: 40px
+    border: none
+    border-radius: 3px
+    background-color: transparent
+    color: theme.$text-color-button
+    display: flex
+    align-items: center
+    justify-content: center
+    transition: all .15s ease-in-out
+
+    & > svg
+        width: 18px
+        height: 18px
+        margin-inline-end: 5px
+
+    & > span
+        font-size: 14px
+        line-height: 2.2
+        font-weight: bold
+
+    &:hover
+        background-color: theme.$bg-button-hover
+        cursor: pointer
+
+.horizontalDivider
+    width: 100%
+    height: 2px
+    background-color: theme.$bg-divider
+    margin: 30px 0 20px 0
+
+.anchorTag
+    display: inline-block
+    width: 100%
+    font-size: 14px
+    line-height: 1.3
+    font-weight: 300
+    color: theme.$trello-anchor-text-color-primary
+    text-decoration: none
+    transition: all .15s ease-in-out
+    text-align: center
+
+    &:hover
+        cursor: pointer
+        text-decoration: .5px underline theme.$trello-anchor-text-color-primary
 
 // --------------------------------------------------
 // media condition
