--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -24,9 +24,12 @@ $bg-form-background: #f9fafc
 $bg-button-inactive: #e2e4e6
 $bg-button-hover: #F9FAFC
 $bg-divider: #cccccc
+$bg-button-active: #5aac44
+$bg-button-active-hover: #61BD4F
 
 // border-color
 $border-input-grey: #ccd4da
+$border-select-grey: #edeff0
 // typography
 
 // shadows
