--- a/styles/account/signup-form.module.sass
+++ b/styles/account/signup-form.module.sass
@@ -12,7 +12,7 @@
     background-color: theme.$bg-primary
     padding: 15px 0 20px 0
     & > * + *
-        margin-block-start: 50px
+        margin-block-start: 40px
 
 .logoContainer
     position: relative
@@ -23,9 +23,10 @@
     justify-conent: center
 
 .formContainer
-    align-self: stretch
     background-color: transparent
+    max-width: 460px
     padding: 40px
+    padding-block-start: 0
     color: theme.$trello-form-text-primary
 
     & > h1
@@ -52,6 +53,20 @@
         &:focus
             border-color: theme.$trello-blue-focus
 
+        &:invalid
+            & ~ button
+                background-color: theme.$bg-button-inactive
+                color: theme.$text-color-button-inactive
+                &:hover
+                    cursor: auto
+        &:valid
+            & ~ button
+                background-color: theme.$bg-button-active
+                color: theme.$trello-white
+                &:hover
+                    cursor: pointer
+                    background-color: theme.$bg-button-active-hover
+
 .policy
     font-weight: inherit
     font-size: 12px
@@ -70,10 +85,8 @@
 
 .continueButton
     width: 100%
-    height: 34px
+    height: 40px
     border: none
-    background-color: theme.$bg-button-inactive
-    color: theme.$text-color-button-inactive
     border-radius: 6px
     font-weight: bold
     padding: 6px 10px
@@ -138,6 +151,34 @@
         cursor: pointer
         text-decoration: .5px underline theme.$trello-anchor-text-color-primary
 
+.languageChoice
+    height: 44px
+    border: 2px solid theme.$border-select-grey
+    color: theme.$trello-form-text-primary
+    width: 180px
+    display: flex
+    flex-flow: row nowrap
+    align-items: center
+    justify-content: space-between
+    padding: 0 5px 0 8px
+    & > select
+        flex: 1
+        -moz-appearance: none
+        -webkit-appearance: none
+        appearance: none
+        font-size: 14px
+        font-weight: 300
+        height: 100%
+        background-color: transparent
+        outline: none
+        border: none
+        color: inherit
+
+    & > svg
+        width: 28px
+        height: 28px
+        color: #959da1
+
 // --------------------------------------------------
 // media condition
 @media screen and (min-width: 641px)
@@ -147,5 +188,7 @@
         padding: 40px 0 30px 0
 
     .formContainer
+        width: 500px
+        padding-block-start: 20px
         background-color: theme.$bg-primary
         @include theme.account-form-shadow
