Signup form updated

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -25,6 +25,8 @@ $bg-button-inactive: #e2e4e6
 $bg-button-hover: #F9FAFC
 $bg-divider: #cccccc
 $bg-button-active: #5aac44
+$bg-button-active-blue: #0052cc
+$bg-button-active-hover-blue: #0065ff
 $bg-button-active-hover: #61BD4F
 
 // border-color
