Styled subscription,,,,,added a custom hook for input form control named useInput : TODO: create a hook for fetch : useFetch

--- a/styles/account/signup-trello.module.sass
+++ b/styles/account/signup-trello.module.sass
@@ -70,8 +70,18 @@
                     cursor: pointer
                     background-color: theme.$bg-button-active-hover
 
+.offerSubscription
+    &  label
+        font-weight: 300
+        font-size: 12px
+        line-height: 1.3
+        color: inherit
+
+    & > input
+        margin-inline-end: 5px
+
 .policy
-    font-weight: inherit
+    font-weight: 300
     font-size: 12px
     line-height: 1.3
     color: inherit
