Trello-Product for Landing page done....

--- a/styles/home.module.sass
+++ b/styles/home.module.sass
@@ -30,6 +30,13 @@
   @include theme.landing-hero-linear-grad
   width: 100%
   overflow-x: hidden
+
+.trelloProduct
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+
 .footer
   width: 100%
   border-top: 1px solid #eaeaea
