Frontend for login and signup done. TODO: integrate backend for login and signup

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -18,16 +18,17 @@ $text-color-button: #505f79
 
 // background-color
 $bg-primary: #fff
+$bg-secondary: #4d4d4d
 $bg-landing-primary: #fff
 $bg-landing-secondary: #eae6ff
 $bg-form-background: #f9fafc
 $bg-button-inactive: #e2e4e6
 $bg-button-hover: #F9FAFC
 $bg-divider: #cccccc
-$bg-button-active: #5aac44
+$bg-button-active-green: #5aac44
 $bg-button-active-blue: #0052cc
 $bg-button-active-hover-blue: #0065ff
-$bg-button-active-hover: #61BD4F
+$bg-button-active-hover-green: #61BD4F
 
 // border-color
 $border-input-grey: #ccd4da
