--- a/styles/account/login-trello.module.sass
+++ b/styles/account/login-trello.module.sass
@@ -28,7 +28,8 @@
     padding: 40px
     padding-block-start: 0
     color: theme.$trello-form-text-primary
-
+    & > * + *
+        margin-block-start: 15px
     & > h1
         font-size: 16px
         line-height: 1.6
@@ -39,7 +40,7 @@
 .form
     font-weight: 300
     line-height: 1.5
-    & > input + input
+    & > * + *
         margin-block-start: 20px
 
     & > input
@@ -56,61 +57,18 @@
         &:focus
             border-color: theme.$trello-blue-focus
 
-        &:invalid
-            & ~ .continueButton
-                background-color: theme.$bg-button-inactive
-                color: theme.$text-color-button-inactive
-                &:hover
-                    cursor: auto
-        &:valid
-            & ~ .continueButton
-                background-color: theme.$bg-button-active-green
-                color: theme.$trello-white
-                &:hover
-                    cursor: pointer
-                    background-color: theme.$bg-button-active-hover-green
-
-.offerSubscription
-    margin-block-start: 20px
-    &  label
-        font-weight: 300
-        font-size: 12px
-        line-height: 1.3
-        color: inherit
-
-    & > input
-        margin-inline-end: 5px
-
-.policy
-    font-weight: 300
-    font-size: 12px
-    line-height: 1.3
-    color: inherit
-    margin: 20px 0
-
-    & > a
-        color: theme.$trello-anchor-text-color-primary
-        text-decoration: none
-        transition: all .15s ease-in-out
-
-        &:hover
-            cursor: pointer
-            text-decoration: 1px underline theme.$trello-anchor-text-color-primary
-
-.continueButton, .signupButton
+.loginButton
     width: 100%
     height: 40px
     border: none
     border-radius: 6px
     font-weight: bold
     padding: 6px 10px
-
-.signupButton
     color: theme.$trello-white
-    background-color: theme.$bg-button-active-blue
+    background-color: theme.$bg-button-active-green
     &:hover
         cursor: pointer
-        background-color: theme.$bg-button-active-hover-blue
+        background-color: theme.$bg-button-active-hover-green
 
 .or
     margin: 16px 0
@@ -156,6 +114,23 @@
     height: 2px
     background-color: theme.$bg-divider
     margin: 30px 0 20px 0
+
+.otherOptions
+    display: flex
+    flex-flow: row nowrap
+    align-items: center
+    justify-content: center
+    width: 100%
+    & > * + *
+        margin-inline-start: 10px
+    &> a
+        width: auto
+
+.dot
+    width: 4px
+    height: 4px
+    border-radius: 50%
+    background-color: theme.$bg-secondary
 
 .anchorTag
     display: inline-block
