Signup : Frontend and Backend integrated : TODO : LOGIN and LOGOUT integration

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -16,9 +16,13 @@ $trello-form-text-primary: #5E6C84
 $text-color-button-inactive: #8c8c8c
 $text-color-button: #505f79
 
+// anchor color
+$anchor-trello-signature: #298FCA
+
 // background-color
 $bg-primary: #fff
 $bg-secondary: #4d4d4d
+$bg-warning: #faf3c0
 $bg-landing-primary: #fff
 $bg-landing-secondary: #eae6ff
 $bg-form-background: #f9fafc
@@ -33,6 +37,7 @@ $bg-button-active-hover-green: #61BD4F
 // border-color
 $border-input-grey: #ccd4da
 $border-select-grey: #edeff0
+$border-warning: #F2D600
 // typography
 
 // shadows
