--- a/styles/account/signup-trello.module.sass
+++ b/styles/account/signup-trello.module.sass
@@ -36,6 +36,26 @@
         margin-block-end: 25px
         text-align: center
 
+.duplicateEmailError
+    background-color: theme.$bg-warning
+    border: 1px solid theme.$border-warning
+    border-radius: 4px
+    font-size: 14px
+    line-height: 1.6
+    font-weight: 300
+    color: theme.$text-color-primary
+    padding: 10px
+    text-align: justify
+    word-wrap: break-word
+    margin-block-end: 15px
+
+    & > a, & > a:hover
+        display: block
+        text-align: left
+        color: theme.$anchor-trello-signature
+        font-size: 18px
+        text-decoration: underline
+
 .form
     font-weight: 300
     line-height: 1.5
