loggingout-confirmation page is being implemented  ... not done yet

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -38,6 +38,10 @@ $bg-button-active-hover-green: #61BD4F
 $border-input-grey: #ccd4da
 $border-select-grey: #edeff0
 $border-warning: #F2D600
+
+// svg color 
+$svg-color-grey: #c1c7d0
+
 // typography
 
 // shadows
