login, logout and signup form alomost done ... TODO : add footer, ISSUE: there is still an issue with bottom border in logout

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -11,6 +11,7 @@ $trello-text-input: #495057
 $trello-anchor-text-color-primary: #0052cc
 // color for form
 $trello-form-text-primary: #5E6C84
+$trello-form-text-secondary: #253858
 
 // button-color
 $text-color-button-inactive: #8c8c8c
@@ -38,6 +39,7 @@ $bg-button-active-hover-green: #61BD4F
 $border-input-grey: #ccd4da
 $border-select-grey: #edeff0
 $border-warning: #F2D600
+$border-separator: #d5d8de
 
 // svg color 
 $svg-color-grey: #c1c7d0
