--- a/styles/account/login-form.module.sass
+++ b/styles/account/login-form.module.sass
@@ -91,7 +91,10 @@
     background-color: theme.$bg-divider
     margin: 30px 0 20px 0
 
-.otherOptions
+.links
+    margin-block-start: 30px
+    border-top: 1px solid theme.$border-separator
+    padding-block-start: 15px
     display: flex
     flex-flow: row nowrap
     align-items: center
