--- a/styles/account/signup-form.module.sass
+++ b/styles/account/signup-form.module.sass
@@ -152,6 +152,11 @@
     background-color: theme.$bg-divider
     margin: 30px 0 20px 0
 
+.link
+    margin-block-start: 30px
+    border-top: 1px solid theme.$border-separator
+    padding-block-start: 15px
+
 .anchorTag
     display: inline-block
     width: 100%
