--- a/styles/account/account-template.module.sass
+++ b/styles/account/account-template.module.sass
@@ -50,6 +50,45 @@
         margin-block-end: 25px
         text-align: center
 
+// styles related to logout confirmation
+.policyNnotice
+    align-self: stretch
+    border-bottom: 1px solid theme.$border-separator
+    padding-block-end: 20px
+
+    &  a
+        display: inline-block
+        font-size: 12px
+        line-height: 1.4
+        font-weight: 400
+        color: theme.$trello-anchor-text-color-primary
+        text-decoration: none
+        transition: all .15s ease-in-out
+        text-align: center
+
+        &:hover
+            cursor: pointer
+            text-decoration: .5px underline theme.$trello-anchor-text-color-primary
+.links
+    display: flex
+    flex-flow: row nowrap
+    align-items: center
+    justify-content: center
+    text-align: center
+
+.dot
+    margin: 0 10px
+    width: 4px
+    height: 4px
+    border-radius: 50%
+    background-color: theme.$bg-secondary
+
+.horizontalDivider
+    width: 100%
+    height: 2px
+    background-color: theme.$bg-divider
+    margin: 30px 0 20px 0
+
 .languageChoice
     height: 44px
     border: 2px solid theme.$border-select-grey
@@ -82,7 +121,7 @@
 // media condition
 @media screen and (min-width: 641px)
     .contentSubContianer
-        width: 400px
+        width: calc(500px - 40px)
         background-color: transparent
         padding: 40px 0 30px 0
 
