footer section added for logout ... FEATURE: another feature figured out in Trello for login, logout and signup when viewport width is less or equal to 640px

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -2,6 +2,7 @@
 // This is the theme partials
 // text-color
 $text-color-primary: #4d4d4d
+$text-color-secondary: #6b778c
 $trello-blue: #0065ff
 $trello-blue-hover: #0051cc
 $trello-blue-focus: #4c9aff
