--- a/styles/account/account-template.module.sass
+++ b/styles/account/account-template.module.sass
@@ -51,11 +51,12 @@
         text-align: center
 
 // styles related to logout confirmation
-.policyNnotice
-    align-self: stretch
-    border-bottom: 1px solid theme.$border-separator
-    padding-block-end: 20px
+.logoutBottomContainer
+    text-align: center
+    width: 360px
+    margin-block-start: 0
 
+.policyNnotice
     &  a
         display: inline-block
         font-size: 12px
@@ -83,12 +84,44 @@
     border-radius: 50%
     background-color: theme.$bg-secondary
 
-.horizontalDivider
+.atlassian
+    border-top: 1px solid theme.$border-separator
+    padding-block-start: 20px
+    margin-block-start: 25px
     width: 100%
-    height: 2px
-    background-color: theme.$bg-divider
-    margin: 30px 0 20px 0
+    display: flex
+    flex-flow: column nowrap
+    align-items: center
+    justify-content: flex-start
+    color: theme.$text-color-secondary
+    font-size: 12px
+    line-height: 1.4
+    font-weight: 400
 
+    & p
+        margin: 0
+        margin-block-start: 10px
+        margin-block-end: 20px
+        padding: 0
+
+    & a
+        display: inline-block
+        font: inherit
+        color: theme.$trello-anchor-text-color-primary
+        text-decoration: none
+        transition: all .15s ease-in-out
+        text-align: center
+
+        &:hover
+            cursor: pointer
+            text-decoration: .5px underline theme.$trello-anchor-text-color-primary
+
+.atlassianLogo
+    position: relative
+    width: 190px
+    height: 32px
+
+// login and signup
 .languageChoice
     height: 44px
     border: 2px solid theme.$border-select-grey
@@ -130,3 +163,7 @@
         padding-block-start: 20px
         background-color: theme.$bg-primary
         @include theme.account-form-shadow
+
+    .logoutBottomContainer
+        width: 100%
+        margin-block-start: 40px
