Footer component added and tested in DocumentWrapper ... TODO: customize footer for different page and send it as render component to Document wrapper AND style quicklinks

--- a/styles/account/document-wrapper.module.sass
+++ b/styles/account/document-wrapper.module.sass
@@ -63,50 +63,43 @@
             cursor: pointer
             text-decoration: .5px underline theme.$trello-anchor-text-color-primary
 
-// .dot
-//     margin: 0 10px
-//     width: 4px
-//     height: 4px
-//     border-radius: 50%
-//     background-color: theme.$bg-secondary
+// .footerContainer
+//     display: flex
+//     flex-flow: column nowrap
+//     align-items: center
+//     justify-content: center
+//     .languageSelectionContainer
+//         margin: 40px 0
+//         height: 44px
+//         border: 2px solid theme.$border-select-grey
+//         color: theme.$trello-form-text-primary
+//         width: 180px
+//         display: flex
+//         flex-flow: row nowrap
+//         align-items: center
+//         justify-content: center
+//         padding: 0 5px 0 8px
+//         & > select
+//             flex: 1
+//             -moz-appearance: none
+//             -webkit-appearance: none
+//             appearance: none
+//             font-size: 14px
+//             font-weight: 300
+//             height: 100%
+//             background-color: transparent
+//             outline: none
+//             border: none
+//             color: inherit
 
-.footer
-    display: flex
-    flex-flow: column nowrap
-    align-items: center
-    justify-content: center
-    .languageSelectionContainer
-        margin: 40px 0
-        height: 44px
-        border: 2px solid theme.$border-select-grey
-        color: theme.$trello-form-text-primary
-        width: 180px
-        display: flex
-        flex-flow: row nowrap
-        align-items: center
-        justify-content: center
-        padding: 0 5px 0 8px
-        & > select
-            flex: 1
-            -moz-appearance: none
-            -webkit-appearance: none
-            appearance: none
-            font-size: 14px
-            font-weight: 300
-            height: 100%
-            background-color: transparent
-            outline: none
-            border: none
-            color: inherit
-
-        & > svg
-            width: 28px
-            height: 28px
-            color: #959da1
-    .quickLinks
-        align-self: stretch
-        border-block-start: 1px solid theme.$border-separator
-        padding-block-start: 20px
+//         & > svg
+//             width: 28px
+//             height: 28px
+//             color: #959da1
+//     .atlassianNquickLinks
+//         align-self: stretch
+//         border-block-start: 1px solid theme.$border-separator
+//         padding-block-start: 20px
 
 // --------------------------------------------------
 // media condition
