Frontend for Login, logout and signup done. finalize backend integration for account

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -20,6 +20,7 @@ $text-color-button: #505f79
 
 // anchor color
 $anchor-trello-signature: #298FCA
+$anchor-trello-quicklinks: #5E6C84
 
 // background-color
 $bg-primary: #fff
