--- a/styles/footer.module.sass
+++ b/styles/footer.module.sass
@@ -55,10 +55,10 @@
     width: 150px
     height: 20px
 
-.quickLinks
-    display: flex
-    flex-flow: row wrap
-    align-items: center
-    justify-content: center
-    & > * + *
-        margin-inline-start: 10px
+// .footerBottom
+//     display: flex
+//     flex-flow: row wrap
+//     align-items: center
+//     justify-content: center
+//     & > * + *
+//         margin-inline-start: 10px
