nav for user Home running....

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -37,11 +37,19 @@ $bg-button-active-blue: #0052cc
 $bg-button-active-hover-blue: #0065ff
 $bg-button-active-hover-green: #61BD4F
 
+// navigation button 
+$bg-nav-button: rgba(0,0,0,0.24)
+$bg-nav-button-hover: #3588b9
+$text-nav-user: #172BAD
+
 // border-color
 $border-input-grey: #ccd4da
 $border-select-grey: #edeff0
 $border-warning: #F2D600
 $border-separator: #d5d8de
+
+// nav color
+$bg-nav-blue: #026aa7
 
 // svg color 
 $svg-color-grey: #c1c7d0
