--- a/styles/header/nav.module.sass
+++ b/styles/header/nav.module.sass
@@ -3,5 +3,20 @@
 @use "../theme"
 
 .nav
+    height: 100%
     display: flex
     flex-flow: row nowrap
+    align-items: center 
+    justify-content: space-between
+
+
+.leftNav, .rightNav
+    display: flex 
+    flex-flow: row nowrap 
+    align-items: center 
+
+.leftnav 
+    justify-content: flex-start 
+
+.rightNav
+    justify-content: flex-end
