--- a/styles/layout.module.sass
+++ b/styles/layout.module.sass
@@ -3,9 +3,10 @@
 @use "theme"
 
 .navContainer
-    height: 40px
+    height: 44px
     width: 100%
-    background-color: rgba(255, 0, 0, .2)
+    padding: 6px 4px
+    background-color: theme.$bg-nav-blue
     position: fixed
     top: 0
     left: 0
