Content for user home page being added

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -41,6 +41,8 @@ $bg-button-active-hover-green: #61BD4F
 $bg-nav-button: rgba(0,0,0,0.24)
 $bg-nav-button-hover: #3588b9
 $text-nav-user: #172BAD
+$border-nav-search: #7bb1d2
+$border-nav-search-hover: rgba(255, 255, 255, 0.4)
 
 // border-color
 $border-input-grey: #ccd4da
