--- a/styles/header/rightNav.module.sass
+++ b/styles/header/rightNav.module.sass
@@ -3,104 +3,128 @@
 @use "../theme"
 
 .rightNavContainer
-    display: flex 
-    flex-flow: row nowrap 
-    align-items: center 
+    display: flex
+    flex-flow: row nowrap
+    align-items: center
     justify-content: flex-end
 
     & > * + *
         margin-inline-start: 5px
 
 .searchButton, .notificationButton, .infoButton
-    width: 32px 
+    width: 32px
     height: 32px
-    border: none 
-    outline: none 
+    border: none
+    outline: none
     border-radius: 3px
 
-    display: flex 
-    align-items: center 
-    justify-content: center 
+    display: flex
+    align-items: center
+    justify-content: center
     transition: all .3s ease
 
-    & > svg 
+    & > svg
         width: 16px
         height: 16px
         color: theme.$trello-white
 
-    &:hover 
+    &:hover
         cursor: pointer
         background-color: theme.$bg-nav-button-hover
 
 .searchButton
     background-color: theme.$bg-nav-button
 
-
 .searchInput
-    display: none    
+    display: none
 .notificationButton, .infoButton
     background-color: transparent
 
 .infoButton
     display: none
 
-
 .userButton
     width: 32px
     height: 32px
-    border: none 
-    outline: none 
+    border: none
+    outline: none
     border-radius: 50%
     background-color: theme.$trello-white
     color: theme.$text-nav-user
     font-size: 12px
     font-weight: 600
 
+.fullSearchContainer
+    display: none
 
 // --------------------------------------------------
 // media conditions 
 
 @media screen and (min-width: 751px)
-    .infoButton 
+    .infoButton
         display: flex
     .searchButton
         display: none
 
-
-    .searchInputContainer
+    .fullSearchContainer
         display: flex
         height: 32px
-        width: 250px
-        flex-flow: row nowrap 
-        align-items: center 
+        width: 300px
+        flex-flow: row nowrap
+        align-items: center
         justify-content: space-between
         color: theme.$trello-white
         background-color: theme.$bg-nav-button-hover
-        border-radius: 3px 
+        border-radius: 3px
         padding: 10px 5px
+        transition: all .15s ease-in
+        border: 1px solid transparent
 
-        
-        & > * + * 
+        & > * + *
             margin-inline-start: 5px
-        & > svg 
-            width: 16px 
+        & > svg
+            width: 16px
             height: 16px
+            color: inherit
 
-        & > input 
+        & > input
             height: 32px
             flex: 1
             background-color: transparent
-            border: none 
+            border: none
             outline: none
             color: inherit
+            font-size: 14px
+            line-height: 1.5
+            font-weight: 400
 
-            & ~ .searchInputRight 
+            & ~ .searchInputRight
                 display: none
 
-            &:focus 
-                background-color: white
-                & ~ .searchInputRight 
+            &:focus
+                & ~ .searchInputRight
                     display: flex
                     flex-flow: row nowrap
-                    align-items: center 
+                    align-items: center
                     justify-content: flex-end
+
+                    & > button
+                        background-color: transparent
+                        outline: none
+                        border: none
+                        display: flex
+                        align-items: center
+                        justify-content: center
+
+                        & > svg
+                            color: inherit
+                            width: 16px
+                            height: 16px
+                        &:hover
+                            cursor: pointer
+
+                    & > button:first-child > svg
+                        transform: rotate(45deg)
+
+                    & > * + *
+                        margin-inline-start: 5px
