--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -37,12 +37,16 @@ $bg-button-active-blue: #0052cc
 $bg-button-active-hover-blue: #0065ff
 $bg-button-active-hover-green: #61BD4F
 
-// navigation button 
+// navigation  
 $bg-nav-button: rgba(0,0,0,0.24)
 $bg-nav-button-hover: #3588b9
 $text-nav-user: #172BAD
 $border-nav-search: #7bb1d2
 $border-nav-search-hover: rgba(255, 255, 255, 0.4)
+
+// account 
+$text-h3: #172b4d
+$text-h3-title: #5e6c84
 
 // border-color
 $border-input-grey: #ccd4da
