--- a/styles/user/home.module.sass
+++ b/styles/user/home.module.sass
@@ -7,26 +7,24 @@
 
 .asideLeft
     display: none
+    padding: 0 15px
+    width: 294px
 
-// Workspace   ...... 
 .workspacesContainer
     padding: 0 15px
 
-.workspaceMetas
-    display: flex
-    flex-flow: row nowrap
-    align-items: flex-start
-    justify-content: flex-start
+    & > div + div
+        margin-block-start: 40px
 
-    & > * + *
-        margin-inline-start: 5px
+.workspacesTitle
+    margin: 20px 0
+    text-align: left
+    color: theme.$text-h3-title
+    font-size: 16px
+    line-height: 1.5
+    font-weight: 700
+    text-transform: uppercase
 
-.workspaceTitle
-    display: block
-
-.workspaceMetaOptions
-    flex: 1
-    display: none
 // --------------------------------------------------
 // media conditions 
 @media screen and (min-width: 600px)
@@ -41,19 +39,3 @@
 
     .asideLeft
         display: flex
-        padding: 0 15px
-        width: 294px
-
-@media screen and (min-width: 751px)
-    .workspaceTitle
-        display: none
-
-    .workspaceMetaOptions
-        display: grid
-        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr))
-        grid-auto-rows: 32px
-        gap: 10px
-
-        & > button
-            width: 100%
-            height: 100%
