BoardCard implementing ... TODO: style start in BoardCard

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -45,8 +45,20 @@ $border-nav-search: #7bb1d2
 $border-nav-search-hover: rgba(255, 255, 255, 0.4)
 
 // account 
-$text-h3: #172b4d
 $text-h3-title: #5e6c84
+$text-h3-subtitle: #172b4d
+
+// background color 
+$bg-account-anchor-button: #091e420a
+$bg-account-anchor-button-hover: #091e4214
+$bg-account-upgrade-anchor-button: #EDDBF4
+$bg-account-upgrade-anchor-button-hover: #DFC0EB
+
+// card bg
+$bg-account-board-card: #0000004d
+
+// icon color
+$icon-account-upgrade-anchor-button: #89609e
 
 // border-color
 $border-input-grey: #ccd4da
