AsideLeft foror user home page implementation started

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -53,6 +53,10 @@ $bg-account-anchor-button: #091e420a
 $bg-account-anchor-button-hover: #091e4214
 $bg-account-upgrade-anchor-button: #EDDBF4
 $bg-account-upgrade-anchor-button-hover: #DFC0EB
+$bg-account: #fafbfc
+$bg-account-aside-left-anchor-hover: #e6e9ed
+$bg-account-aside-left-anchor-active: #e4f0f6
+$text-account-aside-left-anchor-active: #0079BF
 
 // card bg
 $bg-account-board-card: #0000004d
@@ -86,6 +90,7 @@ $breakpoint-landing-xl: 1200px
 $zindex-nav: 111
 $zindex-form: 1
 $zindex-background: -1
+$zindex-content: 100
 
 // --------------------------------------------------
 // mixins
