--- a/styles/user/boardCard.module.sass
+++ b/styles/user/boardCard.module.sass
@@ -9,10 +9,14 @@
     background-color: theme.$bg-account-board-card
     background-image: url("/user/board-card-bg.jpg")
     background-size: cover
+    opacity: .90
+    transition: all .15s ease-in
 
     &:hover
+        opacity: 1
         & > .starBoard
             left: calc(100% - 30px)
+            opacity: 1
 
 .boardTitle
     color: theme.$trello-white
@@ -26,18 +30,24 @@
     border: none
     color: theme.$trello-white
     position: absolute
-    bottom: 10px
+    top: calc(100% - 30px)
     left: 100%
+    opacity: 0
     transition: all .15s ease-in
+    width: 24px
+    height: 24px
+    display: flex
+    align-items: center
+    justify-content: center
 
     & > svg
-        height: 16px
-        width: 16px
+        height: 14px
+        width: 14px
         opacity: .75
         transition: all .15s ease-in
 
-    &:hover
-        cursor: pointer
-        & > svg
+        &:hover
+            cursor: pointer
             height: 18px
             width: 18px
+            opacity: 1
