Workspace Dropdown menu added

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -47,6 +47,9 @@ $border-nav-search-hover: rgba(255, 255, 255, 0.4)
 // account 
 $text-h3-title: #5e6c84
 $text-h3-subtitle: #172b4d
+$account-text-secondary: #091e42a8
+$account-text-secondary-hover: #091e42c4
+$text-account-aside-left-anchor-active: #0079BF
 
 // background color 
 $bg-account-anchor-button: #091e420a
@@ -56,7 +59,7 @@ $bg-account-upgrade-anchor-button-hover: #DFC0EB
 $bg-account: #fafbfc
 $bg-account-aside-left-anchor-hover: #e6e9ed
 $bg-account-aside-left-anchor-active: #e4f0f6
-$text-account-aside-left-anchor-active: #0079BF
+$account-text-special-purple: #CD8DE5
 
 // card bg
 $bg-account-board-card: #0000004d
