--- a/styles/user/home.module.sass
+++ b/styles/user/home.module.sass
@@ -6,6 +6,7 @@
     margin-block-start: 44px
     position: relative
     background-color: theme.$bg-account
+    min-height: 100vh
 
 .asideLeft
     display: none
@@ -16,7 +17,7 @@
     left: 0
 
 .workspacesContainer
-    padding: 56px 15px 10px 15px
+    padding: 50px 15px 10px 15px
     position: sticky
     top: 0
     left: 294px
@@ -52,6 +53,7 @@
         display: block
         width: 100%
         height: 100%
+        border-radius: inherit
         font: inherit
         display: flex
         align-items: center
