UserDropdownMenu implementation started ...

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -49,6 +49,7 @@ $text-h3-title: #5e6c84
 $text-h3-subtitle: #172b4d
 $account-text-secondary: #091e42a8
 $account-text-secondary-hover: #091e42c4
+$text-tertiary: #B3BAC5
 $text-account-aside-left-anchor-active: #0079BF
 
 // background color 
@@ -106,6 +107,9 @@ $zindex-content: 100
 
 @mixin button-hover-focus-shadow
     box-shadow: 0 0 0 .2rem rgba(0,101,255,0.5)
+
+@mixin dropdown-menu-shadow
+    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08)
 
 @mixin account-form-shadow
     box-shadow: rgba(0,0,0,0.1) 0 0 10px
