--- a/styles/header/rightNav.module.sass
+++ b/styles/header/rightNav.module.sass
@@ -53,6 +53,8 @@
     color: theme.$text-nav-user
     font-size: 12px
     font-weight: 600
+    &:hover
+        cursor: pointer
 
 .fullSearchContainer
     display: none
