--- a/styles/header/userDropdownMenu.module.sass
+++ b/styles/header/userDropdownMenu.module.sass
@@ -51,17 +51,17 @@
     justify-content: flex-start
     margin: 10px 0
 
-    & > button
-        outline: none
-        border: none
-        background-color: transparent
-        text-align: left
-        padding-inline-start: 10px
-        margin-block-start: 5px
-        height: 32px
-        &:hover
-            cursor: pointer
-            background-color: theme.$bg-account-anchor-button
+.clickableMenuButton
+    outline: none
+    border: none
+    background-color: transparent
+    text-align: left
+    padding-inline-start: 10px
+    margin-block-start: 5px
+    height: 32px
+    &:hover
+        cursor: pointer
+        background-color: theme.$bg-account-anchor-button
 
 .userInfo
     width: 100%
@@ -81,7 +81,7 @@
     display: flex
     align-items: center
     justify-content: center
-    font-size: 12px
+    font-size: 16px
     text-transform: uppercase
     font-weight: bold
 
@@ -101,3 +101,31 @@
         font-size: 12px
         font-weight: normal
         line-height: 1.5
+
+.profileOptions, .moreUserOptions
+    margin: 10px 0
+    display: flex
+    flex-flow: column nowrap
+    align-items: stretch
+    justify-content: flex-start
+
+    & > a
+        outline: none
+        border: none
+        background-color: transparent
+        text-align: left
+        padding-inline-start: 10px
+        height: 32px
+        display: inline-flex
+        align-items: center
+        justify-content: flex-start
+        color: theme.$text-h3-subtitle
+        font-size: 14px
+        line-height: 1.5
+        font-weight: 400
+        &:hover
+            cursor: pointer
+            background-color: theme.$bg-account-anchor-button
+
+.clickableMenuButton
+    width: 100%
