Frontend for UserDropdownMenu done ,,,, logout functionality added ...

--- a/styles/header/rightNav.module.sass
+++ b/styles/header/rightNav.module.sass
@@ -53,6 +53,9 @@
     color: theme.$text-nav-user
     font-size: 12px
     font-weight: 600
+    display: flex
+    align-items: center
+    justify-content: center
     &:hover
         cursor: pointer
 
