--- a/styles/header/userDropdownMenu.module.sass
+++ b/styles/header/userDropdownMenu.module.sass
@@ -129,3 +129,7 @@
 
 .clickableMenuButton
     width: 100%
+    color: theme.$text-h3-subtitle
+    font-size: 14px
+    line-height: 1.5
+    font-weight: 400
