CreateDropdownMenu ... initialied.... Write a component to create DropdowMenu for rendered component

--- a/styles/header/nav.module.sass
+++ b/styles/header/nav.module.sass
@@ -20,7 +20,7 @@
 .rightNav
     justify-content: flex-end
 
-.userDropdownMenuContainer
+.userDropdownMenuContainer, .createDropdownMenuContainer
     position: fixed
     top: 49px
     right: 5px
