create dropdown added with a try with dynamic position of the dropdown .... Having an issue with dropdown section ref .... Only available after visibility is set to tru

--- a/styles/header/nav.module.sass
+++ b/styles/header/nav.module.sass
@@ -23,6 +23,6 @@
 .userDropdownMenuContainer, .createDropdownMenuContainer
     position: fixed
     top: 49px
-    right: 5px
+    // right: 5px
     background-color: theme.$trello-white
     @include theme.dropdown-menu-shadow
