--- a/styles/header/dropdownMenus.module.sass
+++ b/styles/header/dropdownMenus.module.sass
@@ -2,17 +2,17 @@
 // using partials (theme)
 @use "../theme"
 
-.userDropdownMenu
+.dropdownMenus
     padding: 5px 0
     width: 304px
     height: auto
 
-.title
+.header
     color: theme.$trello-form-text-primary
     position: relative
     height: 41px
 
-.account
+.title
     width: 100%
     height: 100%
     display: flex
@@ -109,7 +109,7 @@
     align-items: stretch
     justify-content: flex-start
 
-    & > a
+    & > a, & > div
         outline: none
         border: none
         background-color: transparent
@@ -126,6 +126,36 @@
         &:hover
             cursor: pointer
             background-color: theme.$bg-account-anchor-button
+
+    & > div
+        height: auto
+        display: flex
+        flex-flow: column nowrap
+        align-items: stretch
+        justify-content: flex-start
+
+        & > button
+            display: inline-flex
+            align-items: center
+            justify-content: flex-start
+            color: theme.$text-h3-subtitle
+            font-size: 14px
+            line-height: 1.5
+            font-weight: 400
+            outline: none
+            border: none
+            background-color: transparent
+            padding: 0
+            & > svg
+                margin-inline-end: 5px
+
+        & > p
+            margin: 0
+            padding: 5px 0
+            color: theme.$text-h3-title
+            font-size: 12px
+            line-height: 1.3
+            font-weight: 400
 
 .clickableMenuButton
     width: 100%
