useDropdownMenus hooks added and tested .... TODO: Integrate all Dropdown from Nav

--- a/styles/header/nav.module.sass
+++ b/styles/header/nav.module.sass
@@ -20,9 +20,8 @@
 .rightNav
     justify-content: flex-end
 
-.userDropdownMenuContainer, .createDropdownMenuContainer
+.dropdownMenuContainer
     position: fixed
     top: 49px
-    // right: 5px
     background-color: theme.$trello-white
     @include theme.dropdown-menu-shadow
