--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -23,7 +23,7 @@ $anchor-trello-signature: #298FCA
 $anchor-trello-quicklinks: #5E6C84
 
 // background-color
-$bg-primary: #fff
+$bg-primary: #ffffff
 $bg-secondary: #4d4d4d
 $bg-warning: #faf3c0
 $bg-landing-primary: #fff
@@ -80,6 +80,9 @@ $bg-nav-blue: #026aa7
 // svg color 
 $svg-color-grey: #c1c7d0
 
+// modal 
+$bg-modal: rgba(0,0,0,.6)
+
 // typography
 
 // shadows
@@ -95,6 +98,7 @@ $zindex-nav: 111
 $zindex-form: 1
 $zindex-background: -1
 $zindex-content: 100
+$zindex-modal: 112
 
 // --------------------------------------------------
 // mixins
