--- a/styles/header/createWorkspaceForm.module.sass
+++ b/styles/header/createWorkspaceForm.module.sass
@@ -2,7 +2,7 @@
 // using partials (theme)
 @use "../theme"
 
-.formContainer
+.container
     margin-block-start: 65px
     height: auto
     background-color: theme.$bg-primary
@@ -10,16 +10,40 @@
     width: calc(100vw - 50px)
 
 .header
+    position: relative
     width: 100%
-    height: 280px
+    height: 296px
     background-color: #e4f7fa
-    background-image: url("/user/create-workspace-header.jpg")
-    background-repeat: no-repeat
-    background-size: contain
-    background-position: top 40px center
+    display: flex
+    flex-flow: row nowrap
+    align-items: center
+    justify-content: center
 
+.headerImage
+    height: calc(100% - 80px)
+    width: calc(100% - 140px)
+    position: relative
+
+.closeButton
+    position: absolute
+    top: 24px
+    right: 15px
+    outline: none
+    border: none
+    background-color: transparent
+
+    &:hover
+        cursor: pointer
+
+    & > svg
+        width: 28px
+        height: 28px
+        color: theme.$text-h3-subtitle
+
+.workspaceForm
+    padding: 20px
 // --------------------------------------------------
 // media condition
 @media screen and ( min-width:  521px)
-    .formContainer
+    .container
         width: 475px
